FIXED NAV update
tweaked nav

--- a/index.html
+++ b/index.html
@@ -6,20 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <link rel="icon" href="favicon.ico">
-
     <title>Homepage</title>
-
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
-    <link href="css/navbar-static-top.css" rel="stylesheet">
+    <link href="css/navbar-fixed-top.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
     
     <link href="css/main.css" rel="stylesheet">
-
 
 
     <style type="text/css">
@@ -59,7 +54,6 @@
 <a class="navbar-brand" href="index.html">COMPANY LOGO</a>
             <div id="navbar" class="navbar-collapse collapse">
                  
-<div class="my-nav"></div>
                   <ul class="nav navbar-nav" >
         <!--           <li class="active"><a href="#">Home</a></li> -->
                     <li class="#about"><a href="category.html">Our Brands</a></li>
