--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 -->
      
 
-      <div class="container-fluid">
+<div class="container">
       <!-- 
       <h3>Full width, single column</h3>
       <p class="text-warning">No grid classes are necessary for full-width elements.</p>
       -->  
         <div class="row" >
-          <div class="col-md-12" style="height: 450px; width:100%; background-color:#cccccc; text-align:left;">
+          <div class="col-md-12" style="height: 650px; width:100%; background-color:#cccccc; text-align:left;">
             <div class="carousel-caption">
             <h1>Promo</h1>
             <p>Takes you somewhere warm, fuzzy, and stylish.</p> <a class="btn btn-default shopnow btn" href="#" role="button">Explore</a></p>
@@ -105,7 +105,7 @@
         </div>
  
         <div class="row" >
-          <div class="col-md-12" style="height: 450px; width:100%; background-color:#cccccc; text-align:left;">
+          <div class="col-md-12" style="height: 650px; width:100%; background-color:#666666; text-align:left;">
             <div class="carousel-caption">
             <h1>Promo</h1>
             <p>Takes you somewhere warm, fuzzy, and stylish.</p> <a class="btn btn-default shopnow btn" href="#" role="button">Explore</a></p>
@@ -114,18 +114,82 @@
         </div>
 
        <div class="row" >
-          <div class="col-md-12" style="height: 450px; width:100%; background-color:#cccccc; text-align:left;">
+          <div class="col-md-12" style="height: 650px; width:100%; background-color:#cccccc; text-align:left;">
             <div class="carousel-caption">
             <h1>Promo</h1>
             <p>Takes you somewhere warm, fuzzy, and stylish.</p> <a class="btn btn-default shopnow btn" href="#" role="button">Explore</a></p>
             </div>
           </div>
         </div>        
+</div>
+<div class="container">
+      <div class="row-fluid"><h3>Featured brands</h3>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4  col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>        
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>        
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product"></div></div>        
+        <div class="col-xs-6 col-md-4 col-lg-3"><div class="thumbnail"><a href="category.html" class="btn btn-primary" role="button">See All Brands</a></div></div>    
+     </div> 
+
+      <div class="row"><div class="span12"><br></div></div>
+</div>      
+
+<div class="container">
+        <div class="row" >
+          <div class="col-md-12" style="height: 650px; width:100%; background-color:#cccccc; text-align:left;">
+            <div class="carousel-caption">
+            <h1>Promo</h1>
+            <p>Takes you somewhere warm, fuzzy, and stylish.</p> <a class="btn btn-default shopnow btn" href="#" role="button">Explore</a></p>
+            </div>
+          </div>
+        </div>
+</div>
+
+<div class="container">
+      <!-- 
+      <h3>Full width, single column</h3>
+      <p class="text-warning">No grid classes are necessary for full-width elements.</p>
+      -->  
+            <div class="row">
+              <div class="col-md-12" style="height: 350px; width:100%; background-color:#cccccc; text-align:left;">
+                <div class="carousel-caption">
+                <h1>Promo</h1>
+                <p>Takes you somewhere warm, fuzzy, and stylish.</p> <a class="btn btn-default shopnow btn" href="#" role="button">Explore</a></p>
+                </div>
+              </div>
+
+            <div class="row">
+              <div class="col-md-4">
+                <div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product">      
+                  <div class="caption"><h3>Thumbnail label</h3><p>Grab your saucepan, some canned chicken, frozen peas and a few pantry ingredients, and in just about 40 minutes </p>
+                  </div>
+              </div>
+            </div>
+
+              <div class="col-md-4">
+                <div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product">      
+                  <div class="caption"><h3>Thumbnail label</h3><p>Grab your saucepan, some canned chicken, frozen peas and a few pantry ingredients, and in just about 40 minutes </p>
+                  </div>
+              </div>
+            </div>
 
 
+              <div class="col-md-4">
+                <div class="thumbnail"><img src="img/product_400x355.jpg" alt="Product">      
+                  <div class="caption"><h3>Thumbnail label</h3><p>Grab your saucepan, some canned chicken, frozen peas and a few pantry ingredients, and in just about 40 minutes </p>
+                  </div>
+              </div>
+            </div>
+          </div>
+     </div>
+  
 
-
-       <div class="container">
 
 
 
